# Node

./: .gitignore  .prettierrc  README.md  SECURITY.md
rust/lit-actions/: Cargo.toml  Makefile  README.md  package-lock.json  package.json  rust-toolchain.toml
rust/lit-actions/cli/: Cargo.toml  main.rs
rust/lit-actions/docs/: api_docs.md  types.d.ts
rust/lit-actions/docs/api_docs_html/: index.html
rust/lit-actions/ext/: Cargo.toml  bindings.rs  lib.rs  macros.rs  validation.rs
rust/lit-actions/ext/js/: 00_ethers.js  01_uint8arrays.js  02_litActionsSDK.js  03_jsonwebtoken.js  99_patches.js
rust/lit-actions/grpc/: Cargo.toml  build.rs  lib.rs  proto.rs  unix.rs
rust/lit-actions/grpc/schema/: lit_actions.proto
rust/lit-actions/scripts/: gen_docs.sh
rust/lit-actions/server/: Cargo.toml  build.rs  lib.rs  runtime.rs  server.rs  tracing.rs
rust/lit-actions/snapshot/: Cargo.toml  lib.rs
rust/lit-actions/tests/: Cargo.toml  bench.rs  build.rs  it.rs
rust/lit-core/lit-api-core/: Cargo.toml
rust/lit-core/lit-api-core/src/: lib.rs
rust/lit-core/lit-attestation/: Cargo.toml
rust/lit-core/lit-attestation/src/: attestation.rs  error.rs  kdf.rs  lib.rs  request.rs
rust/lit-core/lit-blockchain/: Cargo.toml  Makefile  README.md
rust/lit-core/lit-blockchain/abis/: Allowlist.json  ArbitrumKeyDeriver.json  BackupRecovery.json  CloneNet.json  ContractResolver.json  DevKeyDeriver.json  DomainWalletOracle.json  DomainWalletRegistry.json  HostCommands.json  IHDKeyDeriver.json  IKeyDeriver.json  KeyDeriver.json  LITToken.json  Multisender.json  PKPHelper.json  PKPHelperV2.json  PKPNFT.json  PKPNFTMetadata.json  PKPPermissions.json  PaymentDelegation.json  PubkeyRouter.json  RateLimitNFT.json  ReleaseRegister.json  Staking.json  StakingBalances.json  WLIT.json
rust/lit-core/lit-blockchain/scripts/: ecdsa_priv_key_to_pub.sh  generate_contracts.sh  update_abis.sh
rust/lit-core/lit-blockchain/src/: error.rs  lib.rs
rust/lit-core/lit-cli-core/: Cargo.toml
rust/lit-core/lit-cli-core/src/: error.rs  lib.rs
rust/lit-core/lit-contracts-minimal-generator/: Cargo.toml  README.md
rust/lit-core/lit-core/: Cargo.toml
rust/lit-core/lit-core-derive/: Cargo.toml
rust/lit-core/lit-core-derive/src/: lib.rs
rust/lit-core/lit-core/src/: env.rs  lib.rs
rust/lit-core/lit-logging/: Cargo.toml
rust/lit-core/lit-logging/src/: error.rs  lib.rs
rust/lit-node/: .gitignore  Cargo.toml  Makefile  README.md  Rocket.toml  build.rs  config.toml.sample  config_restore_override.toml  rpc-config.example.yaml
rust/lit-node/.config/: nextest.toml
rust/lit-node/abis/: CASK.json  ERC1155.json  MolochDAOv2_1.json  ProofOfHumanity.json
rust/lit-node/benches/: bench_main.rs  lit_actions.rs
rust/lit-node/common/: Cargo.toml  Dockerfile  README.md  start_shiva.sh
rust/lit-node/common/shiva/: .gitignore  Cargo.toml  README.md
rust/lit-node/common/test-common/: Cargo.toml
rust/lit-node/common/utils/: Cargo.toml
rust/lit-node/config/test/: deploy-config-template.json
rust/lit-node/deployment/: ipfs.service  nginx-config
rust/lit-node/deployment/multinode/: lit-actions.service  lit-node.service  lit-node@.service
rust/lit-node/docker_experiments/: Dockerfile  Dockerfile-Musl  docker-compose.yml  dockerBuild.sh  dockerRun.sh
rust/lit-node/js_libs/: api_docs.md  documentation.yml
rust/lit-node/js_libs/deno/: 90_deno_ns.js
rust/lit-node/js_libs/docs/: api_docs.md
rust/lit-node/js_libs/lit/: 00_ethers.js  01_uint8arrays.js  02_litActionsSDK.js  03_jsonwebtoken.js  99_patches.js
rust/lit-node/metrics/: count_actions_this_month.sh  most_common_chains_this_month.sh  most_common_urls_this_month.sh  total_condition_count.sh
rust/lit-node/proto/: chatter.proto
rust/lit-node/scenarios/user_tests/: lit_testnet_config7470.toml  lit_testnet_config7471.toml  lit_testnet_config7472.toml  lit_testnet_config7473.toml  lit_testnet_config7474.toml  lit_testnet_config7475.toml  lit_testnet_config7476.toml  lit_testnet_config7477.toml  lit_testnet_config7478.toml  lit_testnet_config7479.toml  secrets_7470.txt  secrets_7471.txt  secrets_7472.txt  secrets_7473.txt  secrets_7474.txt  secrets_7475.txt  secrets_7476.txt  (+3 more)
rust/lit-node/scripts/: build_and_restart.sh  build_and_restart_no_sgx.sh  build_and_restart_serrano.sh  build_target_branches.sh  bump.sh  deploy_cayenne.sh  deploy_datil_dev.sh  deploy_jalapeno.sh  deploy_serrano.sh  deploy_serrano_staging.sh  dkg.sh  ecdsa_clear.sh  ecdsa_keys.sh  ecdsa_refresh.sh  ecdsa_sign.sh  ecdsa_sign_with_pk.sh  ecdsa_stress.sh  find_and_replace_in_config.sh  find_node_peers.sh  follow-logs.sh  gen_docs.sh  generate_contracts.sh  generate_fake_keys.sh  launch_nodes.sh  loop_tests.sh  migrate_keys.sh  multi-restart.sh  multi-start.sh  multi-stop.sh  new_pkp.sh  new_pkp_batch.sh  refresh.sh  run_ci_tests.sh  run_clippy.sh  run_one_acceptance_or_integration_test.sh  run_one_performance_test.sh  split_logs.sh  start_dev.sh  wipe_nodes_db.sh  wipe_nodes_secrets.sh
rust/lit-node/sgx/: Makefile  build_for_gramine.sh  lit_node.manifest  lit_node.manifest.sgx  lit_node.manifest.template  lit_node.sig  lit_node.token  sign_sgx.sh  start_sgx.sh  start_with_dkg.sh  start_with_dkg_no_sgx.sh
rust/lit-node/src/: error.rs  lib.rs  main.rs  node_state.rs  version.rs
rust/lit-node/tests/: README.md  backup.tar  lit_logging_config.toml  test.rs
rust/lit-os/: Cargo.toml  Makefile  README.md  rust-toolchain.toml
rust/lit-os/lit-attestation-service/: Cargo.toml
rust/lit-os/lit-cli/: Cargo.toml  rust-toolchain.toml
rust/lit-os/lit-cli-os/: .gitignore  Cargo.toml
rust/lit-os/lit-logging-service/: Cargo.toml
rust/lit-os/lit-node-operator/: Cargo.toml  rpc-config.yaml
rust/lit-os/lit-os-core/: Cargo.toml
rust/lit-os/lit-os-guest-initrd/: Cargo.toml  README.md
rust/lit-os/lit-os-prov-api/: .gitignore  Cargo.toml  Rocket.toml  config.toml.sample  rpc-config.example.yaml
rust/lit-os/lit-os-prov-api-client/: Cargo.toml
rust/lit-os/lit-os-prov-core/: .gitignore  Cargo.toml
rust/lit-services/lit-verification-api/: Cargo.toml  config.toml.sample
(+999 files in other folders)
