[package]
name = "lit-actions-grpc"
description = "Lit Actions Protobuf definitions and gRPC glue code"
version = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }

[lib]
path = "lib.rs"
test = false
doctest = false

[dependencies]
anyhow = { workspace = true }
concat-idents = "1"
http = "0.2"
prost = "0.12"
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tonic-reflection = { workspace = true }
tower = "0.4"

[build-dependencies]
tonic-build = { workspace = true }
