[package]
name = "lit-actions-server"
description = "Run JS code in a sandboxed Deno environment"
version = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }

[lib]
path = "lib.rs"
test = false
doctest = false

[dependencies]
anyhow = { workspace = true }
deno_core = { workspace = true }
deno_runtime = { workspace = true }
flume = { workspace = true }
indoc = { workspace = true }
lit-actions-ext = { workspace = true }
lit-actions-grpc = { workspace = true }
lit-api-core = { workspace = true }
# FIXME: use of deprecated macro `as_error`: use the `key:err = value` macro syntax instead (in lit-api-core)
log = "=0.4.20"
serde_json = { workspace = true }
temp-file = "0.1"
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
lit-actions-ext = { workspace = true }
lit-actions-snapshot = { workspace = true }
