[package]
name = "lit-actions-snapshot"
description = "Create V8 snapshot from Deno runtime"
version = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }

[lib]
path = "lib.rs"
test = false
doctest = false

[dependencies]
deno_runtime = { workspace = true, features = ["snapshot"] }
