[package]
name = "lit-actions-tests"
description = "Lit Actions tests"
version = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }
autotests = false

[[test]]
name = "integration"
path = "it.rs"

[dependencies]
anyhow = { workspace = true }
ctor = "0.2"
flume = { workspace = true }
gotham_store = "1"
indoc = { workspace = true }
lit-actions-server = { workspace = true }
pretty_assertions = "1"
pretty_env_logger = "0.5"
rstest = "0.19"
temp-file = "0.1"
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
wiremock = "0.5"
