[package]
name = "lit-api-core"
description = "Lit API Core"
authors = ["David Radunz <david.radunz@litprotocol.com>"]
version = "0.1.0"
edition = "2021"

[features]
default = ["server"]
server = ["tokio", "rocket", "zerossl"]
server-hyper = ["tokio", "hyper", "hyperlocal", "arc-swap"]
client = []
client-hyper = ["client", "hyper", "hyperlocal"]
client-reqwest = ["client", "reqwest"]
rocket-helper = ["tokio", "tokio-util", "async-compression", "bytes"]

[dependencies]
log = { version = "0.4.17", features = ["kv_unstable", "kv_unstable_serde"] }
config = { version = "0.13.2" }
ip_rfc = { version = "0.1.0" }
once_cell = { version = "1.16.0" }
tokio = { version = "*", features = ["full", "io-util"], optional = true }
tokio-util = { version = "0.7.7", features = ["io"], optional = true }
bytes = { version = "1.2.1", optional = true }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = { version = "1.0.89" }
futures = { version = "0.3.25" }
async-std = { version = "1.12.0" }
async-trait = { version = "0.1.63" }
async-compression = { version = "0.3.15", features = ["gzip", "tokio"], optional = true }
openssl = { version = "0.10.42" }
base64 = { version = "0.13.1" }
temp-file = { version = "0.1.7" }
reqwest = { version = "0.11.12", optional = true }
hyper = { version = "0.14", optional = true }
hyperlocal = { version = "0.8", optional = true }
arc-swap = { version = "1.6.0", optional = true }
derive_more = { version = "0.99.17" }
num_cpus = { version = "1.15.0" }
opentelemetry = { version = "0.18" }
sd-notify = { version = "0.4.1" }
semver = { version = "1.0.16" }
tracing = { version = "0.1.40" }
tracing-opentelemetry = { version = "0.18" }

[dependencies.lit-core]
path = "../lit-core"

[dependencies.lit-core-derive]
path = "../lit-core-derive"

[dependencies.rocket]
git = "https://github.com/LIT-Protocol/Rocket"
branch = "feature/port-reuse"
features = ["tls", "json"]
optional = true

[dependencies.zerossl]
git = "https://github.com/LIT-Protocol/zerossl"
branch = "main"
optional = true

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]