[package]
name = "lit-attestation"
description = "Lit Attestation"
authors = ["David Radunz <david.radunz@litprotocol.com>"]
version = "0.1.0"
edition = "2021"

[features]
default = []
generate-via-service = ["generate", "service"]
generate-via-system = ["generate"]
generate = []
service = ["arc-swap", "lit-api-core", "hyper", "hyperlocal"]
kdf = ["blake3"]

[dependencies]
log = { version = "0.4.17", features = ["kv_unstable"] }
once_cell = { version = "1.17.0" }
sha2 = { version = "0.10.6" }
libsecp256k1 = { git = "https://github.com/LIT-Protocol/libsecp256k1", branch = "master", version = "0.7.1" }
hex = { version = "0.4.3" }
hyper = { version = "0.14", optional = true }
hyperlocal = { version = "0.8", optional = true }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = { version = "1.0.89" }
serde_bytes_base64 = { version = "0.1.1" }
bytes = { version = ">= 1.2.1" }
byteorder = { version = "1.4.3" }
sev-snp-utilities = { version = "1.6.0" }
ethers = { version = "2.0.8", features = ["abigen", "legacy"] }
async-trait = { version = "0.1.58" }
tokio = { version = "1.24.2", features = ["full"] }
aleo-std-cpu = { version = "0.1.3" }
derive_more = { version = "0.99.17" }
arc-swap = { version = "1.6.0", optional = true }
blake3 = { version = "1.3.3", optional = true }
moka = { version = "0.12.10", features = ["future"] }
tracing = "0.1.40"

[dependencies.lit-core]
path = "../lit-core"

[dependencies.lit-core-derive]
path = "../lit-core-derive"

[dependencies.lit-blockchain]
path = "../lit-blockchain"

[dependencies.lit-api-core]
path = "../lit-api-core"
features = ["client-hyper"]
optional = true
