[package]
name = "lit-cli-core"
description = "Lit CLI - Core"
authors = ["David Radunz <david.radunz@litprotocol.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0.15", features = ["derive"] }
config = { version = "0.13.2" }
term-table = { version = "1.3.2" }
uuid = { version = "1.1.2", features = ["v4"] }
ctrlc = { version = "3.2.3" }
sha2 = "0.10.6"
bytesize = { version = "1.2.0" }
termion = { version = "2.0.1" }

[dependencies.lit-core]
path = "../lit-core"