[workspace]
members = [
    "utils", "test-common", "shiva", 
]


[patch.crates-io]
# Prevent panic "Custom error class must have a builder registered: Uncaught null" that
# happens when lit-node disconnects (e.g. op_sign_ecdsa: receiving on a closed channel)
# Upstream PR: https://github.com/denoland/deno_core/pull/730
deno_core = { git = "https://github.com/Lit-Protocol/deno_core", branch = "fix/deno-1462-op-panic" }
