[package]
name = "lit-cli-os"
description = "Lit CLI - OS commands"
authors = ["David Radunz <david.radunz@litprotocol.com>"]
version = "0.1.1"
edition = "2021"

[features]
default = ["full"]
host-core = []
host-all = ["host-core"]
guest-instance = []
guest-build = ["lit-attestation/generate-via-system"]
guest-all = ["guest-instance", "guest-build"]
full = ["host-all", "guest-all"]

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
once_cell = { version = "1.18.0" }
term-table = { version = "1.4.0" }
config = { version = "0.13.3" }
ipfs-api-backend-hyper = { git = "https://github.com/LIT-Protocol/rust-ipfs-api", branch = "lit-remote-pinning" }
sha2 = { version = "0.10.8" }
systemctl = { git = "https://github.com/LIT-Protocol/systemctl.git", branch = "main" }
aleo-std-cpu = { version = "0.1.4" }
nu-ansi-term = { version = "0.46.0" }
terminal-spinners = { version = "0.3.2" }
async-std = { version = "1.12.0" }
const-str = { version = "0.5.6" }
ipnet = { version = "2.9.0" }
pinata-sdk = { version = "1.1.0" }
sys-info = { version = "0.9.1" }
human_bytes = { version = "0.4.3" }
ethers = "2.0.8"

[dependencies.lit-core]
path = "../../lit-core/lit-core"
features = ["asn1", "ipfs", "pinata", "cli"]

[dependencies.lit-cli-core]
path = "../../lit-core/lit-cli-core"

[dependencies.lit-attestation]
path = "../../lit-core/lit-attestation"

[dependencies.lit-blockchain]
path = "../../lit-core/lit-blockchain"
features = ["env-override"]

[dependencies.lit-os-core]
path = "../lit-os-core"

[dependencies.lit-os-prov-core]
path = "../lit-os-prov-core"

[dependencies.lit-os-prov-api-client]
path = "../lit-os-prov-api-client"
